añadir monitor especializado a actividad

--- a/ProyectoNaturAdventureWeb/.settings/org.eclipse.core.resources.prefs
+++ b/ProyectoNaturAdventureWeb/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//WebContent/WEB-INF/tags/logininfo.tag=UTF-8
 encoding//WebContent/WEB-INF/tags/navegacion.tag=UTF-8
+encoding/<project>=UTF-8
