--- a/ProyectoNaturAdventureWeb/WebContent/WEB-INF/web.xml
+++ b/ProyectoNaturAdventureWeb/WebContent/WEB-INF/web.xml
@@ -17,7 +17,10 @@
   	<session-timeout>5</session-timeout>
   </session-config>
   
-
+	<error-page>
+		<error-code>404</error-code>
+		<location>/errors/404.html</location>
+	</error-page>
   
   <!--CharsetFilter start--> 
 
